--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,4 +2,7 @@
 ---
 
 @import "{{ site.theme }}";
-body {background-color: rgb(21, 21, 21);}
+body {
+  color: #fff;
+  background-color: rgb(21, 21, 21);
+}
